@@ -1,7 +1,7 @@
 Package: bbmle
 Title: Tools for general maximum likelihood estimation
-Version: 1.0.0
-Date: 2011/06/17
+Version: 1.0.1
+Date: 2011/07/11
 Author: Ben Bolker <bolker@mcmaster.ca>, R Development Core Team
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
 Depends: R (>= 2.0.0), methods, stats, graphics, stats4, numDeriv, lattice, MASS
