@@ -450,10 +450,12 @@ mle2 <- function(minuslogl,
   ## FIXME: worry about boundary violations?
   ## (if we're on the boundary then the Hessian may not be useful anyway)
   ##
-  if ((!is.null(call$upper) || !is.null(call$lower)) &&
-      any(oout$par==call$upper) || any(oout$par==call$lower))
-    warning("some parameters are on the boundary: variance-covariance calculations may be unreliable")
   if (length(oout$par)==0) skip.hessian <- TRUE
+  if (!skip.hessian) {
+    if ((!is.null(call$upper) || !is.null(call$lower)) &&
+        any(oout$par==call$upper) || any(oout$par==call$lower))
+      warning("some parameters are on the boundary: variance-covariance calculations based on Hessian may be unreliable")
+  }
   namatrix <- matrix(NA,nrow=length(start),ncol=length(start))
   if (!skip.hessian) {
     psc <- call$control$parscale
@@ -492,7 +494,21 @@ mle2 <- function(minuslogl,
   ##  if (named)
   fullcoef[nstart[order(oo)]] <- coef
   ## else fullcoef <- coef
-  m = new("mle2", call=call, call.orig=call.orig, coef=coef, fullcoef=unlist(fullcoef), vcov=tvcov,
+  ## compute termination info
+  ## FIXME: should we worry about parscale here??
+  if (length(coef)) {
+    gradvec <- if (!missing(gr)) {
+      objectivefunctiongr(coef)
+    } else {
+      grad(objectivefunction,coef)
+    }
+    oout$maxgrad <-  max(abs(gradvec))
+    if (!skip.hessian) {
+      ev <- eigen(oout$hessian)$value
+      oout$eratio <- min(ev)/max(ev)
+    }
+  }
+  m <- new("mle2", call=call, call.orig=call.orig, coef=coef, fullcoef=unlist(fullcoef), vcov=tvcov,
       min=min, details=oout, minuslogl=minuslogl, method=method,
     optimizer=optimizer,
       data=as.list(data),formula=formula)
