@@ -4,6 +4,11 @@
 \title{bbmle News}
 \encoding{UTF-8}
 
+\section{CHANGES IN VERSION 1.0.1 (2011-08-11)}{
+  Turned off some warnings when skip.hessian=TRUE (e.g. in profile)
+  Calculate max grad and Hessian eigenval ratio, add to "details"
+  (Should add accessor methods)
+}
 \section{CHANGES IN VERSION 1.0.0 (2011-06-17)}{
   \itemize{
     \item mainly just a version bump for CRAN
